hphp/hack/test/typecheck/ppl/use_trait2.php.exp
File "use_trait2.php", line 9, characters 7-13:
a class must be annotated with <<__PPL>> to use <<__PPL>> trait: MyTrait (Typing[4257])
File "use_trait2.php", line 6, characters 7-13:
Declaration is here
